k8s/apps/internal/lubelogger/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lubelogger
  labels:
    name: lubelogger
