k8s/apps/internal/lubelogger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lubelogger
  namespace: lubelogger
spec:
  selector:
    app: lubelogger
  ports:
    - port: 8080
      targetPort: 8080
